frontend/srcs/game/components/BotMode/BotMode.css
.container-bootmode {
  position: relative;
  overflow: hidden; /* Ensure that the pseudo-element doesn't overflow the container */
}

.container-bootmode::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: url("../../../../public/assets/game/backgrounds/game-background.jpg")
    no-repeat center center;
  background-size: cover;
  filter: blur(2px);
  /* filter: brightness(0.5); */
  /* z-index: -1; */
}
.container-bootmode > * {
  position: relative; /* Ensure that direct children are positioned above the pseudo-element */
}

.canvas-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 0px 20px;
}

.Game-container-frame {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100%;
}

.canvas-container {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: 100%;
}

.game {
  margin-right: 10px;
  width: 100%;
  max-width: 900px;
  height: auto;
  max-height: 600px;

  border-radius: 25px;
  border: 0.2px dashed #ffffff5d !important;

  border: 2px solid transparent;
  padding: 10px;
  background-image: linear-gradient(
      to right,
      rgba(0, 0, 0, 0) 10px,
      transparent 10px
    ),
    linear-gradient(to bottom, rgba(0, 0, 0, 0) 10px, transparent 10px),
    linear-gradient(to right, rgba(0, 0, 0, 0) 10px, transparent 10px),
    linear-gradient(to bottom, rgba(0, 0, 0, 0) 10px, transparent 10px);
  background-size: 30px 30px, 30px 30px, 30px 30px, 30px 30px;
  background-position: left top, left top, top bottom, right bottom;
  background-repeat: no-repeat;

  box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25), -4px 4px 4px rgba(0, 0, 0, 0.25),
    4px -4px 4px rgba(0, 0, 0, 0.25), -4px -4px 4px rgba(0, 0, 0, 0.25);
  border-spacing: 100px;
}

.button-leave {
  display: flex;
  justify-content: center;
  align-items: center;
}

/* .container-bootmode {
  width: 100%;
  height: 100%;
  margin-top: 1px;
  background: url("/assets//game/backgrounds/game-background.jpg");
  background-size: cover;
  position: relative;
}

.container-bootmode 
.iPongGame-frame {
  width: 100%;
  height: 100%;
  margin-top: 1px;
  background: url("./assets/game-background.jpg");
  background-size: cover;
  position: relative;
}
.container-bootmode 
.progress-container {
  align-items: center;
  margin: 0px 50px 0px 50px;
}
.container-bootmode 
.leaveButton {
  background-color: #007bff;
  color: #000000;
  padding: 10px 20px;
  border: none;
  border-radius: 5px;
  cursor: pointer;
  transition: background-color 0.3s ease;
}
.container-bootmode 
.leaveButton:hover {
  background-color: #0056b3;
}
.container-bootmode 
.canvas-container {

  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 0px 20px;
  width: 100%;
  height: auto;
  margin: 0 auto;
}
.container-bootmode 
.game {
  width: 100%;
  height: auto;
  object-fit: contain;
}
.container-bootmode 
canvas {
  border: dashed 8px #ffffffaa;
  border-radius: 30px;
}

@media (max-width: 1240px) {
  .container-bootmode 
  .iPongGame-UserBadge-username .username {
    font-size: 2vw !important;
  }
}  */

